--- a/buildout.cfg
+++ b/buildout.cfg
@@ -51,7 +51,7 @@ darwin-patches=
 [ez]
 executable = ${buildout:directory}/parts/part/bin/python
 recipe = minitage.recipe.du
-url = http://pypi.python.org/packages/source/d/distribute/distribute-0.6.25.tar.gz#md5=a690874b9964d958a3200485eb827b1d
+url = file://${buildout:directory}/distribute-0.6.28.tar.gz
 site-packages=${buildout:directory}/parts/part/lib/python2.5/site-packages
 includes =
     ${part:location}/include
@@ -63,9 +63,10 @@ rpath =
 [v]
 recipe =plone.recipe.command
 update-command=${v:command}
-command=${part:location}/bin/python -c 'from setuptools.command.easy_install import main; main()' -U virtualenv
-    ${part:location}/bin/python -c 'from setuptools.command.easy_install import main; main()' -U setuptools-git
-    ${part:location}/bin/python -c 'from setuptools.command.easy_install import main; main()' -U setuptools-hg
+command=
+    ${part:location}/bin/python -c 'from setuptools.command.easy_install import main; main()' -f ${buildout:download-directory}/dist -U distribute==0.6.28;
+    ${part:location}/bin/python -c 'from setuptools.command.easy_install import main; main()' -f ${buildout:download-directory}/dist -U virtualenv;
+    ${part:location}/bin/python -c 'from setuptools.command.easy_install import main; main()' -f ${buildout:download-directory}/dist -U distribute==0.6.28;
 
 [mirrors]
 minitage=distfiles.minitage.org/public/externals
